# Game

./: .clang-tidy.disable  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  file_format_spec.txt  makefile
include/: bubble  math  renderer  rt
object/: Player.cpp  Player.hpp
res/: sheet.tga  tiles.tga
shaders/: bsdf.comp.glsl
src/: main.cpp
src/bubble/: animator.hpp  class_loader.hpp  dynobject.hpp  object.hpp  scene.hpp  stage.hpp
src/draw/: color.hpp  plane.hpp  text.hpp
src/font/: fonts.hpp
src/io/: io.cpp  io.hpp
src/math/: matrix.hpp  retro.hpp
src/primitive/: box.hpp  fixed.hpp  primitive.hpp
src/renderer/: world.cpp  world.hpp
src/rt/: instance.hpp  selector.cpp  selector.hpp
